--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -33,7 +33,8 @@
     }
     &__list-link {
         @extend %title-font;
-        color: rgba(54, 56, 56, 0.9033);
+        color: rgba(54, 56, 56, 0.9);
+        line-height: 22px;
     }
 }
 
