--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,3 +1,6 @@
+$title: #363838; // font's color for titles
+$default: #5A5A5A; // font's color for any text
+
 %title-font {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
