--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -39,3 +39,129 @@
     }
 }
 
+.footer {
+    &__content {
+        background-color: #DFDFDF;
+        padding: 60px 0 80px;
+        line-height: 23px;
+    }
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+    }
+    &__info {
+        width: 539px;
+    }
+    &__info-title {
+        color: $title;
+        @extend %title-font;
+        margin-bottom: 14px;
+    }
+    &__info-text {
+        max-width: 475px;
+        margin-bottom: 16px;
+    }
+    &__info-email {
+        position: relative;
+        font-weight: 600;
+        font-size: 14px;
+        color: $title;
+        display: inline-block;
+        margin-bottom: 22px;
+        padding-left: 30px;
+        &::before {
+            content: '';
+            position: absolute;
+            background-image: url(../images/envelope.svg);
+            left: 0;
+            top: 7px;
+            width: 16px;
+            height: 12px;
+        }
+    }
+    &__form {
+        display: flex;
+    }
+    &__form-input {
+        width: 100%;
+        padding: 6px 10px 6px 18px;
+        border-radius: 21px;
+        background-color: transparent;
+        border: 1px solid rgba($title, 0.7);
+        &::placeholder {
+            font-family: 'Open Sans', sans-serif;
+	        font-weight: 400;
+            color: #A1A1A1;
+        }
+    }
+    &__form-button {
+        background-color: $title;
+        border: none;
+        color: #FFFFF0;
+        border-radius: 21px;
+        font-weight: 600;
+        padding: 6px 12px;
+        min-width: 160px;
+        margin-left: 9px;
+        cursor: pointer;
+    }
+    &__social {
+        margin-right: auto;
+        margin-left: 100px;
+        width: 125px;
+    }
+    &__social-link {
+        padding-left: 28px;
+        position: relative;
+        &::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 3px;
+            width: 16px;
+            height: 16px;
+        }
+    }
+    &__social-link--facebook::before {
+        background-image: url(../images/facebook.svg);
+    }
+    &__social-link--instagram::before {
+        background-image: url(../images/instagram.svg);
+        width: 14px;
+        height: 14px;
+    }
+    &__social-link--pinterest::before {
+        background-image: url(../images/pinterest.svg);
+    }
+    &__social-link--whatsapp::before {
+        background-image: url(../images/whatsapp.svg);
+        width: 14px;
+        height: 14px;
+    }
+    &__social-link--youtube::before {
+        background-image: url(../images/youtube.svg);
+        width: 18px;
+        height: 12px;
+    }
+    &__social-item,
+    &__menu-item {
+        margin-bottom: 15px;
+        font-weight: 600;
+        font-size: 14px;
+    }
+    &__social-link,
+    &__menu-link {
+        color: #707070;
+    }
+    &__menu {
+        width: 125px;
+        margin-right: 60px;
+    }
+    &__copyright {
+        background-color: $title;
+        color: #A1A1A1;
+        text-align: center;
+        padding: 42px 0 41px;
+    }
+}
+
