--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -165,3 +165,43 @@
     }
 }
 
+.rightside-menu {
+    padding-top: 41px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    max-width: 694px;
+    width: 100%;
+    background-color: white;
+    &__close {
+        background-color: transparent;
+        border: none;
+        padding: 0;
+        cursor: pointer;
+        margin-left: 47px;
+        margin-bottom: 57px;
+    }
+    &__content {
+        text-align: center;
+        max-width: 485px;
+        margin: 0 auto;
+    }
+    &__logo {
+        margin-bottom: 41px;
+        display: inline-block;
+    }
+    &__title {
+        color: $title;
+        @extend %title-font;
+        font-size: 36px;
+        line-height: 51px;
+    }
+    &__text {
+        margin-bottom: 75px;
+    }
+    &__image {
+        max-width:
+    }
+}
+
